[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftttt"
version = "0.1.0"
description = "TTT and Transformer baselines for industrial time-series RUL prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.1",
    "matplotlib>=3.6",
    "PyYAML>=6.0",
    "h5py>=3.8",
]

[project.optional-dependencies]
dev = ["ruff>=0.15"]

[tool.setuptools]
packages = ["data", "models", "scripts", "utils"]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [".venv", "ViTTT", "dataset", "outputs"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
